-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: tools
-
b18
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8247594 | 13.0.4 | Henry Jen | P4 | Resolved | Fixed | b05 |
| JDK-8244369 | 11.0.9-oracle | Henry Jen | P4 | Resolved | Fixed | b01 |
| JDK-8244240 | 11.0.8 | Henry Jen | P4 | Resolved | Fixed | b02 |
| JDK-8244969 | openjdk8u262 | Lin Zang | P4 | Resolved | Fixed | b03 |
reproduce steps:
~# export _JAVA_LAUNCHER_DEBUG=1
~# java -cp . Hello
check the output, it always report following time with 1 micro seconds.
1 micro seconds to parse jvm.cfg
1 micro seconds to LoadJavaVM
1 micro seconds to InitializeJVM
1 micro seconds to load main class
~# export _JAVA_LAUNCHER_DEBUG=1
~# java -cp . Hello
check the output, it always report following time with 1 micro seconds.
1 micro seconds to parse jvm.cfg
1 micro seconds to LoadJavaVM
1 micro seconds to InitializeJVM
1 micro seconds to load main class
- backported by
-
JDK-8244240 launcher time metrics always report 1 on Linux when _JAVA_LAUNCHER_DEBUG set
-
- Resolved
-
-
JDK-8244369 launcher time metrics always report 1 on Linux when _JAVA_LAUNCHER_DEBUG set
-
- Resolved
-
-
JDK-8244969 launcher time metrics always report 1 on Linux when _JAVA_LAUNCHER_DEBUG set
-
- Resolved
-
-
JDK-8247594 launcher time metrics always report 1 on Linux when _JAVA_LAUNCHER_DEBUG set
-
- Resolved
-
- relates to
-
JDK-8243539 Copyright info (Year) should be updated for fix of 8241638
-
- Closed
-