8241638: launcher time metrics always report 1 on Linux when _JAVA_LAUNCHER_DEBUG set

Reviewed-by: alanb, dholmes