src/java.base/share/native/libjli/java.c
@@ -238,7 +238,7 @@ JLI_Launch(int argc, char ** argv,              /* main argc, argv */
     char *main_class = NULL;
     int ret;
     InvocationFunctions ifn;
-    jlong start, end;
+    jlong start = 0, end = 0;
     char jvmpath[MAXPATHLEN];
     char jrepath[MAXPATHLEN];
     char jvmcfg[MAXPATHLEN];
@@ -408,7 +408,7 @@ JavaMain(void* _args)
     jmethodID mainID;
     jobjectArray mainArgs;
     int ret = 0;
-    jlong start, end;
+    jlong start = 0, end = 0;
 
     RegisterThread();
 
@@ -1619,7 +1619,7 @@ LoadMainClass(JNIEnv *env, int mode, char *name)
     jmethodID mid;
     jstring str;
     jobject result;
-    jlong start, end;
+    jlong start = 0, end = 0;
     jclass cls = GetLauncherHelperClass(env);
     NULL_CHECK0(cls);
     if (JLI_IsTraceLauncher()) {
@@ -1634,7 +1634,7 @@ LoadMainClass(JNIEnv *env, int mode, char *name)
                                                         USE_STDERR, mode, str));
 
     if (JLI_IsTraceLauncher()) {
-        end   = CounterGet();
+        end = CounterGet();
         printf("%ld micro seconds to load main class\n",
                (long)(jint)Counter2Micros(end-start));
         printf("----%s----\n", JLDEBUG_ENV_ENTRY);
@@ -2082,7 +2082,7 @@ ReadKnownVMs(const char *jvmCfgName, jboolean speculative)
     char line[MAXPATHLEN+20];
     int cnt = 0;
     int lineno = 0;
-    jlong start, end;
+    jlong start = 0, end = 0;
     int vmType;
     char *tmpPtr;
     char *altVMName = NULL;
@@ -2174,7 +2174,7 @@ ReadKnownVMs(const char *jvmCfgName, jboolean speculative)
     knownVMsCount = cnt;
 
     if (JLI_IsTraceLauncher()) {
-        end   = CounterGet();
+        end = CounterGet();
         printf("%ld micro seconds to parse jvm.cfg\n",
                (long)(jint)Counter2Micros(end-start));
     }
