src/java.base/macosx/native/libjli/java_md_macosx.m
@@ -641,7 +641,7 @@ CounterGet()
 {
     struct timeval tv;
     gettimeofday(&tv, NULL);
-    return (tv.tv_sec * 1000) + tv.tv_usec;
+    return (tv.tv_sec * 1000000) + tv.tv_usec;
 }
 
 
